feat: 向量模型配置+记忆归档+消息组截断优化